fix ticker spacing

--- a/styles/components/ticker.module.scss
+++ b/styles/components/ticker.module.scss
@@ -10,14 +10,13 @@
         margin-bottom: 50px;
     }
 
-    :global(.slick-track) {
-        display: flex;
-        align-items: center;
-    }
-
     .ticker {
         position: relative;
         padding: 50px 0;
+
+        :global(.marquee) {
+            min-width: 0;
+        }
 
         &:after {
             content: '';
